Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43705

Canonical path for non-existent paths broken on some devices

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.5.0
    • 5.4.0
    • QPA
    • None
    • Android
    • 2a86bf8ce018cdca3c9e93fb36102ae440d1a114

    Description

      On some Android devices, the canonical path of a non-existent file will be non-empty. This breaks a few autotests.

      An example is the Samsung Galaxy Tab 3 Lite 7'' (SM-T110)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes